--- a/package.json
+++ b/package.json
@@ -5,25 +5,19 @@
   "main": "server/app.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "start:prod": "cd server && npm start",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "client": "cd client && npm run start",
-    "install": "cd client && npm install",
+    "install": "cd server && npm i && cd ../client && npm i",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "cd client && npm run build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^4.1.0",
-    "nodemon": "^1.18.7"
+    "concurrently": "^4.1.0"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "express": "^4.17.1",
-    "firebase": "^8.2.7",
-    "if-env": "^1.0.4",
-    "mongoose": "^5.3.16",
-    "concurrently": "^4.1.0"
+    "if-env": "^1.0.4"
   }
 }
